# DLL_Injection_XiaoaiAgent

./: AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  DLL_Injection_XiaoaiAgent.cpp  InjectorCore.h  LICENSE  README.md  README_CN.md  README_en.md  XiaoaiAgent.rc  XiaoaiAgentInjector.cpp  XiaomiAICreatorInjector.cpp  build.bat  build.ps1  resource.aps  resource.rc
.github/workflows/: c-cpp.yml  ci.yml  cmake-single-platform.yml  main.yml  release.yml
resources/: XiaomiAICreator.rc
src/: XiaoaiAgentInjector.cpp  XiaomiAICreatorInjector.cpp
